fix: font-size, border-radius and spacing fixes

--- a/src/assets/styles/components/_controllers.scss
+++ b/src/assets/styles/components/_controllers.scss
@@ -32,7 +32,7 @@
   --ds-controller-border-color-disabled: var(--ds-color-border-disabled);
 
   --ds-controller-border: var(--ds-border-thin) solid;
-  --ds-controller-border-radius-sm: var(--ds-border-radius-xxs);
+  --ds-controller-border-radius-sm: var(--ds-border-radius-xs);
   --ds-controller-border-radius-lg: var(--ds-border-radius-5xl);
 
   --ds-controller-label-padding: 0 0 0 var(--ds-space-8);
